SL2PythonConverter(ANTLRv4)/gen/TraductorSLParser.java
// Generated from C:/Users/juamp/IdeaProjects/TraductorSL/grammar\TraductorSL.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TraductorSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, TK_ID=50, TK_CADENA=51, TK_NUMERO=52, 
		EXPONENT=53, TK_LOGICO=54, COMMULTI=55, COMM=56, ESP=57, SUM=58, RES=59;
	public static final int
		RULE_fuente = 0, RULE_titulo_programa = 1, RULE_ctv = 2, RULE_my_const = 3, 
		RULE_var = 4, RULE_tipos = 5, RULE_main = 6, RULE_declarar_const = 7, 
		RULE_separador = 8, RULE_expresion = 9, RULE_cuerpo_operadores = 10, RULE_operador = 11, 
		RULE_tk_general = 12, RULE_lvalue = 13, RULE_lvalue_prima = 14, RULE_arg_arreglo = 15, 
		RULE_arg_mult_arreglo = 16, RULE_arg = 17, RULE_arg_mult = 18, RULE_arg_input = 19, 
		RULE_arg_mult_input = 20, RULE_atributo = 21, RULE_declarar_tipos = 22, 
		RULE_lista_dec_tipo = 23, RULE_lista = 24, RULE_tipo_declaracion_tipo = 25, 
		RULE_exp_vector = 26, RULE_dim = 27, RULE_lista_dim = 28, RULE_exp_matriz = 29, 
		RULE_exp_registro = 30, RULE_tipo_dato = 31, RULE_declarar_var = 32, RULE_tipo_declaracion_var = 33, 
		RULE_exp_vector_var = 34, RULE_dim_var = 35, RULE_lista_dim_var = 36, 
		RULE_exp_matriz_var = 37, RULE_exp_registro_var = 38, RULE_declarar_var_no_rescurive_to_translation = 39, 
		RULE_lista_no_recursive_to_translation = 40, RULE_tipo_declaracion_var_no_rescurive_to_translation = 41, 
		RULE_exp_vector_no_recursive_to_translation = 42, RULE_exp_matriz_no_recursive_to_translation = 43, 
		RULE_exp_registro_no_recursive_to_translation = 44, RULE_cuerpo_main = 45, 
		RULE_sentencia = 46, RULE_lvalue_igual = 47, RULE_lvalue_igual_desde = 48, 
		RULE_bucles = 49, RULE_mientras = 50, RULE_expresion_mientras = 51, RULE_repetir = 52, 
		RULE_expresion_repetir = 53, RULE_desde = 54, RULE_expresion_desde = 55, 
		RULE_asignaciones_desde = 56, RULE_asignaciones = 57, RULE_paso = 58, 
		RULE_condicional = 59, RULE_cuerpo_condicional = 60, RULE_sino_si = 61, 
		RULE_cuerpo_sino_si = 62, RULE_sino = 63, RULE_eval = 64, RULE_caso = 65, 
		RULE_cuerpo_caso = 66, RULE_caso_prima = 67, RULE_caso_segundo = 68, RULE_cuerpo_caso_segundo = 69, 
		RULE_subrutinas = 70, RULE_lista_sub = 71, RULE_ref = 72, RULE_lista_sub_separador = 73, 
		RULE_retorno = 74, RULE_retorna2 = 75, RULE_fin_final = 76;
	private static String[] makeRuleNames() {
		return new String[] {
			"fuente", "titulo_programa", "ctv", "my_const", "var", "tipos", "main", 
			"declarar_const", "separador", "expresion", "cuerpo_operadores", "operador", 
			"tk_general", "lvalue", "lvalue_prima", "arg_arreglo", "arg_mult_arreglo", 
			"arg", "arg_mult", "arg_input", "arg_mult_input", "atributo", "declarar_tipos", 
			"lista_dec_tipo", "lista", "tipo_declaracion_tipo", "exp_vector", "dim", 
			"lista_dim", "exp_matriz", "exp_registro", "tipo_dato", "declarar_var", 
			"tipo_declaracion_var", "exp_vector_var", "dim_var", "lista_dim_var", 
			"exp_matriz_var", "exp_registro_var", "declarar_var_no_rescurive_to_translation", 
			"lista_no_recursive_to_translation", "tipo_declaracion_var_no_rescurive_to_translation", 
			"exp_vector_no_recursive_to_translation", "exp_matriz_no_recursive_to_translation", 
			"exp_registro_no_recursive_to_translation", "cuerpo_main", "sentencia", 
			"lvalue_igual", "lvalue_igual_desde", "bucles", "mientras", "expresion_mientras", 
			"repetir", "expresion_repetir", "desde", "expresion_desde", "asignaciones_desde", 
			"asignaciones", "paso", "condicional", "cuerpo_condicional", "sino_si", 
			"cuerpo_sino_si", "sino", "eval", "caso", "cuerpo_caso", "caso_prima", 
			"caso_segundo", "cuerpo_caso_segundo", "subrutinas", "lista_sub", "ref", 
			"lista_sub_separador", "retorno", "retorna2", "fin_final"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'const'", "'var'", "'tipos'", "'inicio'", "'fin'", 
			"'='", "';'", "'*'", "'/'", "'%'", "'^'", "'and'", "'or'", "'not'", "'<'", 
			"'>'", "'<='", "'>='", "'=='", "'<>'", "','", "'leer'", "'('", "')'", 
			"'{'", "'}'", "'['", "']'", "'.'", "':'", "'vector'", "'matriz'", "'registro'", 
			"'cadena'", "'numerico'", "'logico'", "'mientras'", "'repetir'", "'hasta'", 
			"'desde'", "'paso'", "'si'", "'sino'", "'eval'", "'caso'", "'subrutina'", 
			"'ref'", "'retorna'", null, null, null, null, null, null, null, null, 
			"'+'", "'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "TK_ID", "TK_CADENA", "TK_NUMERO", "EXPONENT", "TK_LOGICO", 
			"COMMULTI", "COMM", "ESP", "SUM", "RES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TraductorSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TraductorSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FuenteContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public Titulo_programaContext titulo_programa() {
			return getRuleContext(Titulo_programaContext.class,0);
		}
		public List<CtvContext> ctv() {
			return getRuleContexts(CtvContext.class);
		}
		public CtvContext ctv(int i) {
			return getRuleContext(CtvContext.class,i);
		}
		public List<SubrutinasContext> subrutinas() {
			return getRuleContexts(SubrutinasContext.class);
		}
		public SubrutinasContext subrutinas(int i) {
			return getRuleContext(SubrutinasContext.class,i);
		}
		public FuenteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fuente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterFuente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitFuente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitFuente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuenteContext fuente() throws RecognitionException {
		FuenteContext _localctx = new FuenteContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fuente);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(154);
				titulo_programa();
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3))) != 0)) {
				{
				{
				setState(157);
				ctv();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163);
			main();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__46) {
				{
				{
				setState(164);
				subrutinas();
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			System.out.println("Análisis léxico y sintáctico terminado.");
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Titulo_programaContext extends ParserRuleContext {
		public TerminalNode TK_ID() { return getToken(TraductorSLParser.TK_ID, 0); }
		public Titulo_programaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterTitulo_programa(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitTitulo_programa(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitTitulo_programa(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Titulo_programaContext titulo_programa() throws RecognitionException {
		Titulo_programaContext _localctx = new Titulo_programaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_titulo_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(T__0);
			setState(173);
			match(TK_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtvContext extends ParserRuleContext {
		public My_constContext my_const() {
			return getRuleContext(My_constContext.class,0);
		}
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public CtvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterCtv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitCtv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitCtv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CtvContext ctv() throws RecognitionException {
		CtvContext _localctx = new CtvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ctv);
		try {
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				my_const();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				var();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(177);
				tipos();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class My_constContext extends ParserRuleContext {
		public List<Declarar_constContext> declarar_const() {
			return getRuleContexts(Declarar_constContext.class);
		}
		public Declarar_constContext declarar_const(int i) {
			return getRuleContext(Declarar_constContext.class,i);
		}
		public My_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_my_const; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterMy_const(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitMy_const(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitMy_const(this);
			else return visitor.visitChildren(this);
		}
	}

	public final My_constContext my_const() throws RecognitionException {
		My_constContext _localctx = new My_constContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_my_const);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(T__1);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_ID) {
				{
				{
				setState(181);
				declarar_const();
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public List<Declarar_varContext> declarar_var() {
			return getRuleContexts(Declarar_varContext.class);
		}
		public Declarar_varContext declarar_var(int i) {
			return getRuleContext(Declarar_varContext.class,i);
		}
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__2);
			setState(191);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_ID) {
				{
				{
				setState(188);
				declarar_var();
				}
				}
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TiposContext extends ParserRuleContext {
		public List<Declarar_tiposContext> declarar_tipos() {
			return getRuleContexts(Declarar_tiposContext.class);
		}
		public Declarar_tiposContext declarar_tipos(int i) {
			return getRuleContext(Declarar_tiposContext.class,i);
		}
		public TiposContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterTipos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitTipos(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitTipos(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TiposContext tipos() throws RecognitionException {
		TiposContext _localctx = new TiposContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(T__3);
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TK_ID) {
				{
				{
				setState(195);
				declarar_tipos();
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public List<Cuerpo_mainContext> cuerpo_main() {
			return getRuleContexts(Cuerpo_mainContext.class);
		}
		public Cuerpo_mainContext cuerpo_main(int i) {
			return getRuleContext(Cuerpo_mainContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			match(T__4);
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__14) | (1L << T__22) | (1L << T__23) | (1L << T__25) | (1L << T__37) | (1L << T__38) | (1L << T__40) | (1L << T__42) | (1L << T__44) | (1L << TK_ID) | (1L << TK_CADENA) | (1L << TK_NUMERO) | (1L << TK_LOGICO) | (1L << SUM) | (1L << RES))) != 0)) {
				{
				{
				setState(202);
				cuerpo_main();
				}
				}
				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(208);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_constContext extends ParserRuleContext {
		public TerminalNode TK_ID() { return getToken(TraductorSLParser.TK_ID, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public SeparadorContext separador() {
			return getRuleContext(SeparadorContext.class,0);
		}
		public Declarar_constContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_const; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterDeclarar_const(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitDeclarar_const(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitDeclarar_const(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declarar_constContext declarar_const() throws RecognitionException {
		Declarar_constContext _localctx = new Declarar_constContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarar_const);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(210);
			match(TK_ID);
			setState(211);
			match(T__6);
			setState(212);
			expresion();
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(213);
				separador();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeparadorContext extends ParserRuleContext {
		public SeparadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_separador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterSeparador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitSeparador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitSeparador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeparadorContext separador() throws RecognitionException {
		SeparadorContext _localctx = new SeparadorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_separador);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(216);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public Tk_generalContext tk_general() {
			return getRuleContext(Tk_generalContext.class,0);
		}
		public Cuerpo_operadoresContext cuerpo_operadores() {
			return getRuleContext(Cuerpo_operadoresContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TraductorSLListener ) ((TraductorSLListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TraductorSLVisitor ) return ((TraductorSLVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}
